<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
      android:id="@+id/group"
      android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:checked="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/transactions"
        android:icon="@mipmap/ic_transactions"
        android:title="@string/transactions"/>

    <item
        android:id="@+id/categories"
        android:icon="@mipmap/ic_category"
        android:title="@string/categories"/>

    <item
        android:id="@+id/budget"
        android:icon="@mipmap/ic_category"
        android:title="@string/budgets"/>

    <item
        android:id="@+id/history"
        android:icon="@mipmap/ic_category"
        android:title="@string/history"/>
  </group>
</menu>