<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/coordinator"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <include
          layout="@layout/toolbar"
          android:id="@+id/included"
          />

      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


          <!-- Title -->
          <android.support.design.widget.TextInputLayout
              android:id="@+id/title_input_layout"
              android:layout_gravity="bottom"
              android:layout_marginEnd="@dimen/spacing_medium"
              android:layout_marginStart="@dimen/spacing_medium"
              style="@style/Input"
              >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:textColor="?attr/textColor"
                android:textSize="@dimen/font_headline"
                />

          </android.support.design.widget.TextInputLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="?attr/dividerColor"
              />

          <!-- Color -->
          <FrameLayout
              android:id="@+id/color_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_large"
                android:text="@string/color"
                style="@style/TextSubhead"
                />

            <ImageView
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:src="@drawable/circle"
                style="@style/IconShort"
                android:id="@+id/color"
                />

          </FrameLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="?attr/dividerColor"
              />


          <!-- Icon -->
          <FrameLayout
              android:id="@+id/icon_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_large"
                android:text="@string/icon"
                style="@style/TextSubheadOneLine"
                />

            <ImageView
                android:id="@+id/icon"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:src="@mipmap/ic_category"
                style="@style/IconShort"
                />

          </FrameLayout>

          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="?attr/dividerColor"
              />

          <!-- Budget -->
          <FrameLayout
              android:id="@+id/container_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >

            <TextView
                android:id="@+id/icon_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_large"
                android:text="@string/default_budget"
                style="@style/TextSubheadOneLine"
                />

            <TextView
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/spacing_medium"
                tools:text="My budget"
                style="@style/TextSubheadOneLine"
                />

          </FrameLayout>

        </LinearLayout>

      </ScrollView>

    </LinearLayout>

  </android.support.design.widget.CoordinatorLayout>
</layout>
