<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <include
                layout="@layout/toolbar"
                android:id="@+id/included"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >


                    <!-- Description -->
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/description_input_layout"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:layout_marginStart="@dimen/spacing_medium"
                        style="@style/Input"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:inputType="text"
                            android:textColor="?attr/textColor"
                            android:textSize="@dimen/font_headline"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?attr/dividerColor"
                        />

                    <!-- Value -->
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/item_height_double"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:src="@mipmap/ic_value"
                            style="@style/IconShort"
                            />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/value_input_layout"
                            android:layout_marginStart="@dimen/spacing_huge"
                            style="@style/Input"
                            >

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/value"
                                android:inputType="numberDecimal|numberSigned"
                                />

                        </android.support.design.widget.TextInputLayout>

                    </FrameLayout>

                    <!-- Category -->
                    <RelativeLayout
                        android:id="@+id/category_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/spacing_medium"
                        android:paddingBottom="@dimen/spacing_medium"
                        >

                        <ImageView
                            android:id="@+id/category_icon"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:src="@mipmap/ic_category"
                            android:layout_centerVertical="true"
                            style="@style/IconShort"
                            />

                        <TextView
                            android:id="@+id/icon_title"
                            android:layout_toEndOf="@+id/category_icon"
                            style="@style/TextBody"
                            android:layout_marginStart="32dp"
                            android:text="@string/category"
                            />

                        <TextView
                            android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/icon_title"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_huge"
                            android:text="@string/loading"
                            style="@style/TextSubheadOneLine"
                            />

                    </RelativeLayout>

                    <!-- Container -->
                    <RelativeLayout
                        android:id="@+id/container_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/spacing_medium"
                        android:paddingBottom="@dimen/spacing_medium"
                        >

                        <ImageView
                            android:id="@+id/container_icon"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:src="@mipmap/ic_container"
                            android:layout_centerVertical="true"
                            style="@style/IconShort"
                            />

                        <TextView
                            android:id="@+id/container_title"
                            android:layout_toEndOf="@+id/container_icon"
                            style="@style/TextBody"
                            android:layout_marginStart="32dp"
                            android:text="@string/budget"
                            />

                        <TextView
                            android:id="@+id/container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/container_title"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_huge"
                            android:text="@string/loading"
                            style="@style/TextSubheadOneLine"
                            />

                    </RelativeLayout>

                    <!-- Date -->
                    <FrameLayout
                        android:id="@+id/date_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:src="@mipmap/ic_date"
                            style="@style/IconShort"
                            />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_huge"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/spacing_large"
                            android:paddingTop="@dimen/spacing_large"
                            tools:text="September 16"
                            style="@style/TextSubhead"
                            />

                    </FrameLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
